# click-commands-folder

./: .readthedocs.yaml  README.md  pyproject.toml  tox.ini
docs/source/: api.rst  conf.py  index.rst  usage.rst
requirements/: dev.in  dev.txt  docs.txt  lint.txt  tests.txt
src/click_commands_folder/: __init__.py  commands_folder.py
tests/: test_commands.py
tests/fixtures/commands/: command_a.py  command_b.py  command_group.py  not_a_command.py
