[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "click-commands-folder"
version = "1.0"
authors = [
  { name="rotoclap", email="rotoclap@gmail.com" },
]
description = "A Click extension to read commands from a folder"
readme = "README.MD"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["click", "command", "folder"]
dependencies = [
    "click"
]

[project.urls]
Homepage = "https://github.com/rotoclap/click-commands-folder"
Documentation = "https://click-commands-folder.readthedocs.io"
Issues = "https://github.com/rotoclap/click-commands-folder/issues"
